--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header .menu{
     font-size: 48px;
     margin-bottom: 10px;
 }
-.texto-apresentacao a{
+.btn{
     background-color: #122a57;
     color: #fff;
     text-align: center;
@@ -160,4 +160,71 @@ header .menu{
 .item-servico img{
     width: 80%;
     margin: auto;
+}
+
+#planos{
+    flex-direction: column;
+    min-width: 100vh;
+    padding-top: 50px;
+}
+
+#planos h2{
+    font-size: 32px;
+}
+
+.list-planos{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.item-plano{
+    flex: 1;
+    border: 5px solid #122a57;
+    margin-right: 20px;
+    padding: 10px;
+    max-width: 240px;
+}
+
+.item-plano .btn{
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.item-plano h3{
+   font-size: 24px;
+   display: flex;
+   flex-direction: column;
+   text-align: center;
+   margin-top: 20px;
+}
+
+.item-plano h3::after{
+    content: "";
+    background-color: #122a57;
+    width: 100%;
+    height: 3px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.item-plano ul{
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.item-plano ul li{
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+.item-plano ul li::before{
+    content: "";
+    background-color: #122a57;
+    width: 10px;
+    height: 10px;
+    margin-right: 5px;
 }
